[package]
name = "liz"
description = "LuaWizard - Features a bunch of functionalities for lua scripts inside the liz global variable."
repository = "https://github.com/emuvi/liz/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.11"
edition = "2018"

[dependencies]
rlua = "0.18"
simple-error = "0.2"