[package]
name = "liz"
description = "Liz ( LuaWizard ) is a library and a command program that features a bunch of functionalities for lua scripts inside the liz global variable. "
repository = "https://github.com/emuvi/liz/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.23"
edition = "2018"

[dependencies]
rlua = "0.19"
simple-error = "0.2"
num_cpus = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1"
regex = "1"
