[package]
name = "liz"
description = "Liz ( Lua Wizard ) is a library and a command program that features a bunch of functionalities for lua scripts inside the Liz global variable. "
repository = "https://github.com/emuvi/liz/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.23"
edition = "2018"

[dependencies]
rlua = "0.19"
num_cpus = "1"
serde_json = "1"
regex = "1"
once_cell = "1"
chrono = "0.4"
rubx = { path = "../rubx" }